minor html template changes to fix spacing issues

--- a/output/styles.css
+++ b/output/styles.css
@@ -8,3 +8,6 @@
 .card-body {
     background-color:lightskyblue;
 }
+#team-container {
+    flex-wrap:wrap
+}
